--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="result_2">Hmm, nothing wrong here.</string>
     <string name="result_3">It sounds a little noise there</string>
     <string name="result_4">Sorry, I can\'t hear you.\nDo you need to call police?</string>
+    <string name="create_report_error">Something went wrong</string>
+    <string name="create_report_success">Report completed!</string>
 </resources>
