update report UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="result_4">Sorry, I can\'t hear you.\nDo you need to call police?</string>
     <string name="create_report_error">Something went wrong</string>
     <string name="create_report_success">Report completed!</string>
+    <string name="upload_file_failed">Upload record file failed</string>
 </resources>
